--- a/pages/19905.html
+++ b/pages/19905.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9226/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9226/#Item_13" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1508,7 +1508,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>points 3, 4 and 5 being arbitrarly close to each other with respect to their distance to points 1, 2 and 6</p>
+<p>points 3, 4 and 5 being arbitrarily close to each other with respect to their distance to points 1, 2 and 6</p>
 </li>
 
 <li>
@@ -1793,6 +1793,18 @@ margin-left: 0em;
 
 <p>That this is a dgc-algebra-homomorphism compatible with the <a class="existingWikiWord" href="/nlab/show/cooperad">cooperad</a>-<a class="existingWikiWord" href="/nlab/show/structure">structure</a> is proven in <a href="#LambrechtsVolic14">Lambrechts-Volic 14</a>, that it is a <a class="existingWikiWord" href="/nlab/show/quasi-isomorphism">quasi-isomorphism</a> is proven in <a href="#LambrechtsVolic14">Lambrechts-Volic 14, section 10</a>.</p>
 
+<div class="num_remark" id="AsPerturbativeChernSimonsTheory">
+<h6 id="remark">Remark</h6>
+
+<p><strong>(<a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative</a> <a class="existingWikiWord" href="/nlab/show/Chern-Simons+theory">Chern-Simons theory</a> )</strong></p>
+
+<p>The <a class="existingWikiWord" href="/nlab/show/differential+forms">differential forms</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>g</mi> <mrow><mi>i</mi><mi>j</mi></mrow></msub></mrow><annotation encoding="application/x-tex">g_{i j}</annotation></semantics></math> from Def. <a class="maruku-ref" href="#SphereClassGeneratorsOfDeRhamCohomology"></a> may be understood as being the <a class="existingWikiWord" href="/nlab/show/Feynman+propagator">Feynman propagator</a> of <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative</a> <a class="existingWikiWord" href="/nlab/show/higher+Chern-Simons+theory">higher Chern-Simons theory</a> regarded equivalently in its incarnation as a <a class="existingWikiWord" href="/nlab/show/Feynman+amplitude+on+compactified+configuration+spaces+of+points">Feynman amplitude on compactified configuration spaces of points</a>. See at <em><a class="existingWikiWord" href="/nlab/show/Chern-Simons+propagator">Chern-Simons propagator</a></em> for more on this.</p>
+
+<p>From this perspective, the <a class="existingWikiWord" href="/nlab/show/quasi-isomorphism">quasi-isomorphism</a> in Prop. <a class="maruku-ref" href="#QuasiIsomorphismBetweenGraphComplexAndDeRhamComplexOfFM"></a> sends each <a class="existingWikiWord" href="/nlab/show/graph">graph</a>, regarded as a <a class="existingWikiWord" href="/nlab/show/Feynman+diagram">Feynman diagram</a> for <a class="existingWikiWord" href="/nlab/show/higher+Chern-Simons+theory">higher Chern-Simons theory</a>, to its correspomnding <a class="existingWikiWord" href="/nlab/show/Feynman+amplitude">Feynman amplitude</a>, regarded in its incarnation as a <a class="existingWikiWord" href="/nlab/show/Feynman+amplitude+on+compactified+configuration+spaces+of+points">Feynman amplitude on compactified configuration spaces of points</a>.</p>
+
+<p>That this should be the case was originally suggested in <a href="#Kontsevich94">Kontsevich 94</a>.</p>
+</div>
+
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -1886,20 +1898,26 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Alberto+Cattaneo">Alberto Cattaneo</a>, <a class="existingWikiWord" href="/nlab/show/Pavel+Mnev">Pavel Mnev</a>, Remark 11 in <em>Remarks on Chern-Simons invariants</em>, Commun.Math.Phys.293:803-836,2010 (<a href="https://arxiv.org/abs/0811.2045">arXiv:0811.2045</a>)</p>
 </li>
 </ul>
+
+<p>That this should exhibit a graph complex model for the cohomology of compactified configuration spaces was suggested in</p>
+
+<ul>
+<li id="Kontsevich94"><a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">Maxim Kontsevich</a>, pages 11-12 of <em>Feynman diagrams and low-dimensional topology</em>, First European Congress of Mathematics, 1992, Paris, vol. II, Progress in Mathematics <strong>120</strong>, Birkhäuser (1994), 97–121 (<a href="http://www.ihes.fr/~maxim/TEXTS/Feynman%20%20diagrams%20and%20low-dimensional%20topology.pdf">pdf</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November  4, 2018 at 13:18:06.
+  Last revised on November  5, 2018 at 01:46:23.
   See the <a href="https://ncatlab.org/nlab/history/Fulton-MacPherson operad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fulton-MacPherson+operad/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Fulton-MacPherson+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fulton-MacPherson+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fulton-MacPherson+operad/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/Fulton-MacPherson+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fulton-MacPherson+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Fulton-MacPherson operad/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
