--- a/pages/1788.html
+++ b/pages/1788.html
@@ -309,21 +309,23 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>¬</mo><mo>∼</mo></mrow><annotation encoding="application/x-tex">\not\sim</annotation></semantics></math></p>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>=</mo><msup><mi>S</mi> <mn>1</mn></msup></mrow><annotation encoding="application/x-tex">X=S^1</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Y</mi><mo>=</mo><msup><mi>S</mi> <mn>3</mn></msup></mrow><annotation encoding="application/x-tex">Y=S^3</annotation></semantics></math>, then <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>Σ</mi> <mn>∞</mn></msup><mi>Ω</mi><msup><mi>S</mi> <mn>3</mn></msup><mo>≈</mo><msup><mi>𝕊</mi> <mn>2</mn></msup><mo>∨</mo><msup><mi>𝕊</mi> <mn>4</mn></msup><mo>∨</mo><msup><mi>𝕊</mi> <mn>6</mn></msup><mo>∨</mo><mi>⋯</mi></mrow><annotation encoding="application/x-tex">\Sigma^\infty \Omega S^3\approx \mathbb{S}^2\vee \mathbb{S}^4\vee \mathbb{S}^6\vee\cdots </annotation></semantics></math> is very unlike <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ω</mi><msup><mi>Σ</mi> <mn>∞</mn></msup><msup><mi>S</mi> <mn>3</mn></msup><mo>≈</mo><msup><mi>𝕊</mi> <mn>2</mn></msup></mrow><annotation encoding="application/x-tex">\Omega \Sigma^\infty S^3\approx \mathbb{S}^2</annotation></semantics></math></p>
+
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Y</mi><mo>=</mo><msup><mi>S</mi> <mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></msup></mrow><annotation encoding="application/x-tex">Y=S^{n+1}</annotation></semantics></math>, not <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Y</mi><mo>=</mo><msup><mi>S</mi> <mn>3</mn></msup></mrow><annotation encoding="application/x-tex">Y=S^3</annotation></semantics></math>, but it is the same: <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>Σ</mi> <mn>∞</mn></msup><mi>Ω</mi><msup><mi>S</mi> <mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></msup><mo>=</mo><msub><mo lspace="thinmathspace" rspace="thinmathspace">⋁</mo> <mrow><mi>k</mi><mo>≥</mo><mn>1</mn></mrow></msub><msup><mi>𝕊</mi> <mi>kn</mi></msup></mrow><annotation encoding="application/x-tex">\Sigma^\infty\Omega S^{n+1}= \bigvee_{k\geq1} \mathbb{S}^{kn}</annotation></semantics></math> while <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ω</mi><msup><mi>Σ</mi> <mn>∞</mn></msup><msup><mi>S</mi> <mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></msup><mo>=</mo><msup><mi>𝕊</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">\Omega \Sigma^\infty S^{n+1}= \mathbb{S}^n</annotation></semantics></math></p>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November  5, 2018 at 01:49:53.
+  Last revised on November  5, 2018 at 02:06:35.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1711" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1711 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1712" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1712 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
