--- a/pages/19905.html
+++ b/pages/19905.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1808,7 +1808,13 @@ margin-left: 0em;
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/little+n-disk+operad">little n-disk operad</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/little+n-disk+operad">little n-disk operad</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Feynman+amplitude+on+compactified+configuration+space+of+points">Feynman amplitude on compactified configuration space of points</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -1910,7 +1916,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  5, 2018 at 01:46:23.
+  Last revised on November  5, 2018 at 02:02:54.
   See the <a href="https://ncatlab.org/nlab/history/Fulton-MacPherson operad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
