--- a/pages/2418.html
+++ b/pages/2418.html
@@ -817,6 +817,10 @@ margin-left: 0em;
 
 <p>moreover, every <a class="existingWikiWord" href="/nlab/show/integral+modular+function">integral modular function</a> arises in this way.</p>
 
+<h2 id="related_concepts">Related concepts</h2>
+
+<p>A concrete relation between <a class="existingWikiWord" href="/nlab/show/2d+SCFT">2d SCFT</a> and <a class="existingWikiWord" href="/nlab/show/tmf">tmf</a> is the lift of the <a class="existingWikiWord" href="/nlab/show/Witten+genus">Witten genus</a> to the <a class="existingWikiWord" href="/nlab/show/string+orientation+of+tmf">string orientation of tmf</a>. See there fore more.</p>
+
 <h2 id="references">References</h2>
 
 <ul>
@@ -833,7 +837,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>Finally a hint supporting the conjecture (at least in its previous form concerning <a class="existingWikiWord" href="/nlab/show/2d+SCFT">2d SCFT</a>):</p>
+<p>A hint supporting the conjectured relation of <a class="existingWikiWord" href="/nlab/show/2d+SCFT">2d SCFT</a> to <a class="existingWikiWord" href="/nlab/show/tmf">tmf</a>, vaguely in line with the lift of the <a class="existingWikiWord" href="/nlab/show/Witten+genus">Witten genus</a> to the <a class="existingWikiWord" href="/nlab/show/string+orientation+of+tmf">string orientation of tmf</a>:</p>
 
 <ul>
 <li><a class="existingWikiWord" href="/nlab/show/Davide+Gaiotto">Davide Gaiotto</a>, <a class="existingWikiWord" href="/nlab/show/Theo+Johnson-Freyd">Theo Johnson-Freyd</a>, <em>Holomorphic SCFTs with small index</em> (<a href="https://arxiv.org/abs/1811.00589">arXiv:1811.00589</a>)</li>
@@ -844,14 +848,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  5, 2018 at 02:52:01.
+  Last revised on November  5, 2018 at 03:50:13.
   See the <a href="https://ncatlab.org/nlab/history/(2,1)-dimensional Euclidean field theories and tmf" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/%282%2C1%29-dimensional+Euclidean+field+theories+and+tmf" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/%282%2C1%29-dimensional+Euclidean+field+theories+and+tmf/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/%282%2C1%29-dimensional+Euclidean+field+theories+and+tmf" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/%282%2C1%29-dimensional+Euclidean+field+theories+and+tmf" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/%282%2C1%29-dimensional+Euclidean+field+theories+and+tmf" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/%282%2C1%29-dimensional+Euclidean+field+theories+and+tmf/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/%282%2C1%29-dimensional+Euclidean+field+theories+and+tmf" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/%282%2C1%29-dimensional+Euclidean+field+theories+and+tmf" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/(2,1)-dimensional Euclidean field theories and tmf/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
