--- a/pages/6817.html
+++ b/pages/6817.html
@@ -981,7 +981,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>Finally a hint for a relation to <a class="existingWikiWord" href="/nlab/show/tmf">tmf</a> compatible with the conjectured relation between <a class="existingWikiWord" href="/nlab/show/%282%2C1%29-dimensional+Euclidean+field+theories+and+tmf">(2,1)-dimensional Euclidean field theories and tmf</a>:</p>
+<p>A hint for a relation to <a class="existingWikiWord" href="/nlab/show/tmf">tmf</a>, vaguely in line with the lift of the <a class="existingWikiWord" href="/nlab/show/Witten+genus">Witten genus</a> to the <a class="existingWikiWord" href="/nlab/show/string+orientation+of+tmf">string orientation of tmf</a>:</p>
 
 <ul>
 <li><a class="existingWikiWord" href="/nlab/show/Davide+Gaiotto">Davide Gaiotto</a>, <a class="existingWikiWord" href="/nlab/show/Theo+Johnson-Freyd">Theo Johnson-Freyd</a>, <em>Holomorphic SCFTs with small index</em> (<a href="https://arxiv.org/abs/1811.00589">arXiv:1811.00589</a>)</li>
@@ -1012,14 +1012,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  5, 2018 at 02:47:12.
+  Last revised on November  5, 2018 at 03:48:19.
   See the <a href="https://ncatlab.org/nlab/history/2d SCFT" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/2d+SCFT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/2d+SCFT/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/2d+SCFT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/2d+SCFT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/2d+SCFT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/2d+SCFT/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/2d+SCFT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/2d+SCFT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/2d SCFT/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
