--- a/pages/19905.html
+++ b/pages/19905.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1837,7 +1837,25 @@ margin-left: 0em;
 <li id="FultonMacPherson94">William Fulton, Robert MacPherson, <em>A compactification of configuration spaces</em>, Ann. of Math. (2), 139(1):183–225, 1994.</li>
 </ul>
 
-<p>and the <a class="existingWikiWord" href="/nlab/show/operad">operad</a>-<a class="existingWikiWord" href="/nlab/show/structure">structure</a> on these compactified spaces was considered in</p>
+<p>based on the general method of <a class="existingWikiWord" href="/nlab/show/resolution+of+singularities">resolution of singularities</a> due to</p>
+
+<ul>
+<li id="Hironaka64"><a class="existingWikiWord" href="/nlab/show/Heisuke+Hironaka">Heisuke Hironaka</a>, <em>Resolution of Singularities of an Algebraic Variety Over a Field of Characteristic Zero: I</em>, Annals of Mathematics Second Series, Vol. 79, No. 1 (Jan., 1964), pp. 109-203 (95 pages) (<a href="https://www.jstor.org/stable/1970486">jstor:1970486</a>)</li>
+</ul>
+
+<p>More general compactifications of spaces of <em>subspace arrangements</em> are due to</p>
+
+<ul>
+<li id="deConciniProcesi95"><a class="existingWikiWord" href="/nlab/show/Corrado+de+Concini">Corrado de Concini</a>, <a class="existingWikiWord" href="/nlab/show/Claudio+Procesi">Claudio Procesi</a>, <em>Wonderful models of subspace arrangements</em>, Selecta Mathematica, New Series Vol. 1, No. 3, 1995 (<a href="https://link.springer.com/content/pdf/10.1007/BF01589496.pdf">pdf</a>)</li>
+</ul>
+
+<p>see also</p>
+
+<ul>
+<li id="Feichtner05">Eva Maria Feichner, <em>De Concini–Procesi Wonderful Arrangement Models: A Discrete Geometer’s Point of View</em>, Math. Sci. Res. Inst. Publ 52, 2005 (<a href="http://library.msri.org/books/Book52/files/17feich.pdf">pdf</a>)</li>
+</ul>
+
+<p>The <a class="existingWikiWord" href="/nlab/show/operad">operad</a>-<a class="existingWikiWord" href="/nlab/show/structure">structure</a> on Axelrod-Singer Fulton-MacPherson compactifications of <a class="existingWikiWord" href="/nlab/show/configuration+spaces+of+points">configuration spaces of points</a> was considered in</p>
 
 <ul>
 <li id="GetzlerJones94"><a class="existingWikiWord" href="/nlab/show/Ezra+Getzler">Ezra Getzler</a>, <a class="existingWikiWord" href="/nlab/show/John+Jones">John Jones</a>, <em>Operads, homotopy algebra and iterated integrals for double loop spaces</em> (<a href="https://arxiv.org/abs/hep-th/9403055">arXiv:hep-th/9403055</a>)</li>
@@ -1916,14 +1934,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  5, 2018 at 02:02:54.
+  Last revised on November  5, 2018 at 05:31:54.
   See the <a href="https://ncatlab.org/nlab/history/Fulton-MacPherson operad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fulton-MacPherson+operad/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/Fulton-MacPherson+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fulton-MacPherson+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Fulton-MacPherson+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fulton-MacPherson+operad/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/Fulton-MacPherson+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fulton-MacPherson+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Fulton-MacPherson operad/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
